<resources>

    <string name="app_name">Nav</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Configuraciones</string>
    <string name="grafico">Grafico</string>
    <string name="editar_notas">Editar notas...</string>
    <string name="agregar_alumno">Agregar Alumno</string>
    <string name="agregar_nota">Agregar Nota</string>
    <string name="agregar_curso">Agregar Curso</string>
    <string name="error_curso_existente">Error: Curso ya existente!</string>
    <string name="agregado">Agregado</string>
    <string name="alumno_cargado">Alumno Cargado</string>
    <string name="error_alumno_existente">Error: Alumno ya existente!</string>
    <string name="nota_agregada">Nota agregada</string>
    <string name="no_se_encuentra_el_alumno">No se encuentra el alumno </string>
    <string name="en_el_curso"> en el curso </string>
    <string name="separador"> - </string>
    <string name="no_se_encuentra_el_curso">No se encuentra el curso </string>
    <string name="notas">Notas</string>
    <string name="eliminado">Eliminado </string>
    <string name="no_hay_curso_seleccionado">No hay curso seleccionado</string>
    <string name="no_hay_alumno_seleccionado">No hay alumno seleccionado</string>
    <string name="no_hay_nota_seleccionada">No hay nota seleccionada</string>
    <string name="dia">\n Dia: </string>
    <string name="observacion">\n Observación: </string>
    <string name="nota_max">Nota Max: </string>
    <string name="nota_min">Nota Min: </string>
    <string name="promedio">Promedio: </string>
    <string name="estado">Estado: </string>
    <string name="seleccione_un_curso">Seleccione un curso</string>
    <string name="seleccione_un_alumno">Seleccione un alumno</string>
    <string name="no_es_posible_refrescar">No es posible refrescar</string>
    <string name="tus_cursos">Tus Cursos</string>
    <string name="cursos">Cursos</string>
    <string name="ultimo_curso">Último Curso</string>
    <string name="ultimo_alumno">Último Alumno</string>
    <string name="exportando_curso">Exportando Curso: </string>
    <string name="exportando_alumno">Exportando Curso: </string>
    <string name="informe_de">Informe de </string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="grafico_de">Gráfico de </string>
    <string name="no_pdf">No hay ninguna aplicación disponible para visualizar PDF</string>
    <string name="mail_text">Informe generado por Nav</string>
    <string name="mail_toast">Enviando mail con...</string>
    <string name="pdf_titulo">Seguimiento de </string>
    <string name="pdf_asunto">Informe de Desempeño</string>
    <string name="pdf_keywords">Seguimiento, Informe,</string>
    <string name="pdf_curso">Curso: </string>
    <string name="pdf_fecha">Fecha: </string>
    <string name="pdf_nota_maxima">Nota máxima: </string>
    <string name="pdf_nota_minima">Nota mínima: </string>
    <string name="pdf_estado">Estado del Alumno: </string>
    <string name="pdf_promedio">Promedio General: </string>
    <string name="pdf_nota">Nota</string>
    <string name="pdf_fecha1">Fecha</string>
    <string name="pdf_anotacion">Anotacion</string>
    <string name="pdf_cantidad_de_alumnos">Cantidad de Alumnos: </string>
    <string name="pdf_toast">PDF Creado Satisfactoriamente</string>
    <string name="pdf_alumnos">Alumnos</string>
    <string name="search_hint">Buscar...</string>
    <string name="alumno_resultado">Alumno - </string>
    <string name="curso_resultado">Curso - </string>
    <string name="nuevo_mail">Nuevo Mail</string>
    <string name="edicion_de_notas">Edicion de Notas</string>
    <string name="inserte_nuevo_mail">Inserte Nuevo Mail</string>
    <string name="ingrese_texto">Ingrese Texto</string>
    <string name="observacion1">Observación</string>
    <string name="grafico_de_notas">Gráfico de Notas</string>
    <string name="informacion_basica">Información Básica</string>
    <string name="boton_grafico">Ver Gráfico</string>
    <string name="historial_de_notas">Historial de Notas</string>
    <string name="boton_agregar">Agregar</string>
    <string name="guardar">Guardar</string>
    <string name="agregar">Agregar</string>
    <string name="action_exportar_pdf">Exportar a PDF</string>
    <string name="action_enviar_mail">Enviar por Email</string>
    <string name="excelente">Excelente</string>
    <string name="bien">Bien</string>
    <string name="regular">Regular</string>
    <string name="mal">Mal</string>
    <string name="muy_mal">Muy mal</string>

</resources>