<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TIInfoBasica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/informacion_basica"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/alumno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultimo_alumno" />

    <TextView
        android:id="@+id/notamax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota_max" />

    <TextView
        android:id="@+id/notamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nota_min" />

    <TextView
        android:id="@+id/estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="41dp"
        android:text="@string/estado" />

    <TextView
        android:id="@+id/promedio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promedio" />

    <TextView
        android:id="@+id/TIGraficoNotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/grafico_de_notas"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/grafico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mostrarGrafico"
        android:text="@string/boton_grafico" />

    <TextView
        android:id="@+id/TIhistorialdenotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/historial_de_notas"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <ListView
        android:id="@+id/historial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>