<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/agregar"/>
    <item
        android:id="@+id/action_websearch"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_action_exportar"
        android:showAsAction="ifRoom"
        android:title="@string/action_exportar_pdf"/>
    <item
        android:id="@+id/action_mail"
        android:icon="@drawable/ic_action_email"
        android:showAsAction="ifRoom"
        android:title="@string/action_enviar_mail"/>
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_importar"/>

</menu>